Return "picture_url" when Notebook was added / modified
